--- a/themes/blockwise-theme/style.css
+++ b/themes/blockwise-theme/style.css
@@ -1117,16 +1117,9 @@ body {
     padding: 1rem; }
   .site-header .toggled .sub-menu {
     display: none; }
-  .site-header .toggled li.focus > .sub-menu {
+  .site-header .toggled li.focus .sub-menu {
     display: inline-block;
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column nowrap;
-            flex-flow: column nowrap; }
+    position: static; }
   .site-header .toggled ul > li {
     width: 100%;
     display: block;
